<resources>
    <string name="app_name">EnseñarteLSA</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="bvn2">Esta aplicacion te va a ayudar a aprender ciertos conceptos basicos de la Lengua de Señas Argentina y asi fomentar el aprendizaje de este idioma, clave para romper las barreras de comunicacion.</string>
    <string name="TxtUsuario">Usuario</string>
    <string name="TxtNombre">Nombre</string>
    <string name="TxtApellido">Apellido</string>
    <string name="TxtKey">Contraseña</string>
    <string name="TxtConfirmKey">Confirmar contraseña</string>
    <string name="btnregistrarse">Registrarse</string>
    <string name="TxtEmail">Email</string>
    <string name="btnbnv">Continuar</string>
    <string name="lblreg1">¿Ya tiene una cuenta?</string>
    <string name="lbllog1">¿Aún no esta registrado?</string>
    <string name="btnIniciarsession">Iniciar sesión</string>
    <string name="lblreg2">Registrese por favor</string>
    <string name="descimguserlogin">user</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>

    <string name="menu_ca">Camino de Aprendizaje</string>
    <string name="menu_listadosenas">Listado de Señas</string>
    <string name="menu_mapa">Mapa de institutos</string>
    <string name="menu_perfil">Perfil</string>

    <string name="cambiar_key">Cambiar contraseña</string>
    <string name="modificar_datos">Modificar datos</string>
    <string name="actual_key">Contraseña actual</string>
    <string name="nueva_key">Contraseña nueva</string>
    <string name="confirmar">Confirmar</string>
    <string name="volver">Volver</string>

    <string name="empty"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_admin">navAdmin</string>


    <string name="menu_usuarios">Usuarios</string>
    <string name="menu_consignas">Consignas</string>
    <string name="menu_opciones">Opciones</string>
    <string name="menu_orden">Ordenes</string>
    <string name="title_activity_navigation_admin">navAdmin</string>
    <string name="title_activity_fragment_mapa">Map</string>

    <string name="lblIdConsigna">Id de la consigna</string>
    <string name="lblDescOpc">Descripción de la opción:</string>
    <string name="lblTituloOpcAlta">Alta de Opciones</string>
    <string name="lblTituloOpcMod">Modificación de Opciones</string>
    <string name="txtIdConsigna">Id de la consigna</string>
    <string name="txtDescOpc">Descripción de la opción</string>
    <string name="lblResultadoOpc">¿Es la opción correcta?</string>
    <string name="lblImportante">Importante</string>
    <string name="btnAlta">Dar de alta</string>
    <string name="btnModificar">Modificar</string>
    <string name="btnBaja">Dar de baja</string>
    <string name="lblBajaOMod">¿Desea dar de baja o modificar?</string>

    <string name="lblTituloConAlta">Alta de Consignas</string>
    <string name="IdNivel">Id del nivel</string>
    <string name="Nivel">Nivel</string>
    <string name="lblDesc">Descripción de la consigna</string>
    <string name="lblImagen">URL de la imagen (Si es que necesita una)</string>


    <string name="Alta">Alta</string>
    <string name="Modificacion">Modificación</string>
    <string name="BajayList">Baja y Listado</string>
    <string name="Listado">Listado</string>
    <string name="lblConsigna">¿A que animal correspondería esta seña?</string>

    <string name="lblTituloOpcList">Baja y Listado de Opciones</string>

    <string name="rdPerro">Perro</string>
    <string name="rdGato">Gato</string>
    <string name="rdAguila">Aguila</string>
    <string name="rdPez">Pez</string>

    <string name="imgSena">Seña</string>
    <string name="lblNombreSena">Seña</string>
    <string name="lblDescripcionSena">Seña</string>
    <string name="lblTituloUsersList">Listado de Usuarios</string>
    <string name="EstadoUsuario">Estado Usuario</string>
    <string name="btnBuscarUser">Buscar</string>
    <string name="ViewKeys">Ver claves</string>

    <string name="lblNivel">Nivel</string>
    <string name="lblTipo">¿Es consigna o seña?</string>
    <string name="lblId">Id de la consigna/seña</string>
    <string name="lblOrden">Orden de aparición</string>
    <string name="lblIdOrden">Id del orden de aparición</string>
    <string name="lbltc">Tipo de cuenta</string>
    <string name="BuscarSena">Ingrese una palabra</string>

    <string name="nav_ejercicios">Ejercicios</string>
    <string name="nueva_key2">Confirmar contraseña nueva</string>

</resources>