<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ca"
            android:icon="@drawable/ic_path"
            android:title="@string/menu_ca" />
        <item
            android:id="@+id/nav_listadosenas"
            android:icon="@drawable/ic_signs"
            android:title="@string/menu_listadosenas" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_perfil" />
    </group>
</menu>