<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/ic_users"
            android:title="@string/menu_usuarios" />
        <item
            android:id="@+id/nav_consignas"
            android:icon="@drawable/ic_consignas"
            android:title="@string/menu_consignas" />
        <item
            android:id="@+id/nav_opciones"
            android:icon="@drawable/ic_opciones"
            android:title="@string/menu_opciones" />
        <item
            android:id="@+id/nav_orden"
            android:icon="@drawable/ic_orden"
            android:title="@string/menu_orden" />
    </group>
</menu>