<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/lblTituloOpcAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/lblTituloOpcMod"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/lblDescOpc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblDescOpc"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTituloOpcAlta" />

    <TextView
        android:id="@+id/lblResultadoOpc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/lblResultadoOpc"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescOpc" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="375dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/btnModificar"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblResultadoOpc" />

    <CheckBox
        android:id="@+id/cbResultado"
        android:layout_width="28dp"
        android:layout_height="23dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/empty"
        app:layout_constraintStart_toEndOf="@+id/lblResultadoOpc"
        app:layout_constraintTop_toBottomOf="@+id/txtDescOpc" />

    <EditText
        android:id="@+id/txtDescOpc"
        android:layout_width="376dp"
        android:layout_height="111dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txtDescOpc"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDescOpc"
        tools:ignore="Autofill" />

</androidx.constraintlayout.widget.ConstraintLayout>