<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txtTitModBaja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lblBajaOMod"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/lblBajaOMod" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:autofillHints="Ingrese su nombre"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/TxtNombre"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBuscarUsuario" />

        <EditText
            android:id="@+id/txtSearchUserName"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:layout_marginTop="29dp"
            android:autofillHints="Ingrese su nombre"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/TxtUsuario"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitModBaja" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:autofillHints="Ingrese su correo electronico"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/TxtEmail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

        <EditText
            android:id="@+id/txtApellido"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:autofillHints="Ingrese su apellido"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/TxtApellido"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

        <EditText
            android:id="@+id/txtKey"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:autofillHints="Confirme su contrasenia"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/TxtKey"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <EditText
            android:id="@+id/txtConfirmKey"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:autofillHints="Ingrese su contraseña"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/TxtConfirmKey"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtKey" />

        <Button
            android:id="@+id/btnModificarUsuario"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/btn_dos"
            android:ems="10"
            android:onClick="RedirecLogin"
            android:text="@string/btnModificar"
            android:textColor="@drawable/txt_btn_dos"
            android:textSize="30sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.607"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchEstado" />

        <Button
            android:id="@+id/btnBuscarUsuario"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_dos"
            android:ems="10"
            android:onClick="RedirecLogin"
            android:text="@string/btnBuscarUser"
            android:textColor="@drawable/txt_btn_dos"
            android:textSize="30sp"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSearchUserName" />

        <Switch
            android:id="@+id/switchEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/EstadoUsuario"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtConfirmKey" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>