<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cliente.Perfil.fragPerfil">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="143dp"
        android:layout_height="99dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/btnregistrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/TxtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView8" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/TxtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNombre" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        app:layout_constraintVertical_bias="0.028">

        <Button
            android:id="@+id/btnKey"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:shadowColor="#FFFFFF"
            android:text="@string/cambiar_key" />

        <Button
            android:id="@+id/btnDatos"
            android:layout_width="147dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:background="@drawable/roundedbutton"
            android:text="@string/modificar_datos" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>