<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgSena2"
        android:layout_width="369dp"
        android:layout_height="362dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imgSena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sena_perro" />

    <TextView
        android:id="@+id/txtNombreSena"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/lblNombreSena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSena2" />

    <TextView
        android:id="@+id/txtDescripcionSena"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/lblDescripcionSena"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreSena" />

</androidx.constraintlayout.widget.ConstraintLayout>